<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".dialogs.LoginDialog">

    <TextView
        android:id="@+id/reply_title"
        android:text="@string/prompt_reply_title"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:id="@+id/reply_rx"
        android:text="@string/placeholder_string"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="@color/red_a400"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/reply_content"
        android:hint="@string/prompt_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/reply_send"
        android:src="@drawable/ic_send"
        android:contentDescription="@string/placeholder_icon"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/reply_progress"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>
