<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/about_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:src="@drawable/webartisans"
            android:contentDescription="@string/placeholder_icon"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:text="@string/developer"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            app:typeface="roboto_bold" />

        <com.devspark.robototextview.widget.RobotoTextView
            android:text="@string/pref_about_1stline"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            app:typeface="roboto_regular" />

        <Button
            android:id="@+id/button"
            android:text="@string/pref_about_button"
            android:background="@drawable/button_bg"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_width="fill_parent"
            android:textColor="@android:color/white" />

    </LinearLayout>

</FrameLayout>
